--- a/NOVA/Views/Uretim/Index.cshtml
+++ b/NOVA/Views/Uretim/Index.cshtml
@@ -2134,6 +2134,7 @@
                         error: function (data) {
 
                             $("#progress2").hide();
+                            console.log(data);
                             $("#SiparisModal").modal('hide');
                         },
                         success: function (data) {
